--- a/views/views.xml
+++ b/views/views.xml
@@ -7,27 +7,39 @@
       <field name="inherit_id" ref="l10n_cl_dte_point_of_sale.report_boleta_header_layout"/>
       <field name="arch" type="xml">
         <xpath expr="//div[@id='header']" position="replace">
-          <div class="row" style="text-align:center;">
+          <style>
+                .b {
+                      margin-left: auto;
+                      margin-right: auto;
+                      width: 80%;
+                    } 
+          </style>
+        <div class="row b">
+            <div class="col-xs-12">
+                <img t-if="o.company_id.logo" t-att-src="'data:image/png;base64,%s' % to_text(o.company_id.logo)" style="max-height: 100px;"/>
+            </div>        
+        </div>
+          <div class="row b">
             <div class="col-xs-12">
               <h4>
                 <span t-esc="o.company_id.partner_id.name"/>
               </h4>
             </div>
 			    </div>
-			    <div class="row" style="text-align:center;">
-				    <div class="col-xs-12 text-center">
+			    <div class="row b">
+				    <div class="col-xs-12">
 					    <h4>
 						    <span t-esc="o.company_id.partner_id.document_number"/>
 					    </h4>
 				    </div>
 			    </div>
-          <div class="row" style="text-align:center;">
-            <div class="col-xs-12 text-center">
+          <div class="row b">
+            <div class="col-xs-12">
               <h5 t-field="o.company_id.activity_description"/>
             </div>				
           </div>
-          <div class="row" style="text-align:center;">
-            <div class="col-xs-12 text-center">
+          <div class="row b">
+            <div class="col-xs-12">
               <h5>
                 Casa matriz:
                 <span t-esc="o.company_id.partner_id.street"/>
@@ -44,8 +56,8 @@
               </h5>
             </t>            
           </div>
-          <div class="row" style="text-align:center;">
-            <div class="col-xs-12 text-center" t-if="o.document_class_id">
+          <div class="row b" style="text-align:center;">
+            <div class="col-xs-12" t-if="o.document_class_id">
               <h5>
                 <span t-field="o.document_class_id.name"/>
                 N°:
@@ -53,7 +65,7 @@
               </h5>
             </div>
           </div>				
-	
+          <br/>
         </xpath>
       </field>
     </record>
